[package]
name = "vcc"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]


[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
wax = "0.6.0"
nyar-error = "0.1.11"
wasm-opt = "0.116.0"
wasmprinter = "0.2.75"
wasmtime-wasi = "15.0.1"

[dependencies.wasmtime]
version = "15.0.1"
features = ["component-model"]

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
